--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroui/react": "^2.8.5",
+    "@heroui/theme": "^2.4.23",
+    "framer-motion": "^12.23.24",
     "highcharts": "^12.4.0",
     "highcharts-react-official": "^3.2.1",
     "lucide-react": "^0.554.0",
