--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "eslint"
+    "lint": "eslint",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "lint:ci": "eslint . --ext .ts,.tsx --max-warnings=0",
+    "e2e": "playwright test"
   },
   "dependencies": {
     "highcharts": "^12.4.0",
@@ -35,5 +38,6 @@
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "typescript": "^5"
+    ,"@playwright/test": "^1.45.0"
   }
 }
