feat: テストコード追加、カバレッジコメントアクションの追加
- Updated project description to highlight the open-source nature and technologies used.
- Added a section for major updates, including UI improvements and new testing features.
- Improved quick start instructions and clarified usage of custom JSONL files.
- Expanded main features list for better clarity on capabilities.

test: Add unit tests for faction win rate and utility functions

- Implemented tests for `buildFactionWinRateData` to validate faction statistics.
- Created utility tests for player data handling and filtering functions.

fix: Update jest configuration and setup for better compatibility

- Introduced a pre-setup file to shim CSS.supports for jsdom compatibility.
- Adjusted jest configuration to ignore test paths and include necessary setup files.

chore: Refactor Playwright tests and configuration

- Updated Playwright configuration to allow dynamic base URL.
- Enhanced E2E test scripts for better local and CI execution.
- Added a test result tracking file for last run status.

style: Improve code quality and linting rules

- Ensured consistent code style across the project with updated linting rules.
- Added automatic linting fixes in CI to maintain code quality.

docs: Update documentation for testing and coverage reporting

- Added instructions for coverage reporting and external service integration.
- Clarified E2E testing setup and execution steps in the README.

--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
+    "test:coverage": "jest --coverage",
+    "report-coverage": "npm run test:coverage && open coverage/lcov-report/index.html",
     "test:watch": "jest --watch",
     "lint": "eslint",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "lint:ci": "eslint . --ext .ts,.tsx --max-warnings=0",
-    "e2e": "playwright test"
+    "e2e": "npx playwright install --with-deps && playwright test",
+    "e2e:dev": "npx playwright install --with-deps && npx wait-on http://localhost:3000 --timeout 120000 && playwright test",
+    "e2e:ci": "npx playwright install --with-deps && DISABLE_BASEPATH=true npm run build && lsof -ti :3000 | xargs -r kill -9 || true && npx serve@latest out -l 3000 & echo $! > .next_server_pid && npx wait-on http://localhost:3000 --timeout 120000 && playwright test; kill $(cat .next_server_pid) || true",
+    "e2e:setup": "npx playwright install --with-deps"
   },
   "dependencies": {
     "highcharts": "^12.4.0",
