--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "deploy": "npm run export && npx gh-pages -d out"
   },
   "dependencies": {
+    "gsap": "^3.12.2",
     "highcharts": "^12.4.0",
     "highcharts-react-official": "^3.2.1",
     "lucide-react": "^0.554.0",
@@ -29,7 +30,9 @@
     "react-dom": "19.2.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.45.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
@@ -38,15 +41,13 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "gh-pages": "^5.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "tailwindcss": "^4",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5",
-    "@playwright/test": "^1.45.0",
-    "gh-pages": "^5.0.0"
-    
+    "typescript": "^5"
   }
 }
