feat: Implement movement events per game feature with Anime.js animations
- Added functionality to display movement distance and events chart for individual games.
- Introduced game switch buttons within the chart card for navigation between games.
- Enhanced data transformers to support all games data and return selected game data.
- Integrated Anime.js for smooth animations during sorting of player lists and legends.
- Updated hooks and components to accommodate new data structure and props.
- Created unit tests for new functionality and ensured existing tests remain intact.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "deploy": "npm run export && npx gh-pages -d out"
   },
   "dependencies": {
+    "animejs": "^4.2.2",
     "gsap": "^3.12.2",
     "highcharts": "^12.4.0",
     "highcharts-react-official": "^3.2.1",
